--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,19 @@ jobs:
     # Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    
+    # Compile and build the application
+    - uses: actions/setup-go@v2
+      with:
+        go-version: '1.14.0' # The Go version to download (if necessary) and use.
+    - run: |
+        go version
+        go build .
+    
+    # Perform lint
+    - name: go1.12 linter
+      uses: shoukoo/golang-pipeline/go1.12/linter@master
+      with:
+        GOLINT: on
+        GOLINTPATH: pkg/controller
+        MISSPELL: off
