--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,10 @@ on:
     - staging
     - develop
   pull_request:
-    branches: [ master ]
+    branches:
+    - master
+    - staging
+    - develop
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,23 +27,27 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
     
-    # Compile and build the application
-    - uses: actions/setup-go@v2
+    # Install all the dependicies
+    - name: Install dependencies
+      uses: actions/setup-go@v2
       with:
         go-version: '1.14.0' # The Go version to download (if necessary) and use.
     - run: |
         go version
-        go build .
+        go get -u golang.org/x/lint/golint
+        
+    # Run build of the application
+    - name: Run build
+      run: go build . 
+      
+    # Run vet & lint on the code
+    - name: Run vet & lint
+      run: |
+        go vet .
+        golint .
     
-    # Perform lint
-    - name: go1.12 linter
-      uses: shoukoo/golang-pipeline/go1.12/linter@master
-      with:
-        GOLINT: on
-        GOLINTPATH: pkg/controller
-        MISSPELL: off
+    # Run testing on the code
+    - name: Run testing
+      run: cd test && go test -v
+    
