--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,8 @@ jobs:
     needs: [build] # Only run this workflow when "build" workflow succeeds
     if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' }} # Only run this workflow if it is master branch on push event
     steps:
+    - uses: actions/checkout@v2
+
     # Deploy to Docker registry
     - name: Deploy to Docker registry
       uses: docker/build-push-action@v1
